--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,5 +44,5 @@ IF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDE
 ENDIF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
 
 
-FIND_PACKAGE(SFML COMPONENTS system audio)
+FIND_PACKAGE(SFML COMPONENTS system audio network)
 INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
