--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
-SET (project_LIBS fftw3 ${SFML_LIBRARIES} ${SFML_AUDIO_LIBRARY_DYNAMIC_RELEASE})
+SET (project_LIBS fftw3 ${SFML_LIBRARIES} ${SFML_AUDIO_LIBRARY_DYNAMIC_RELEASE} ${SFML_NETWORK_LIBRARY_DYNAMIC_RELEASE} ${SFML_SYSTEM_LIBRARY_DYNAMIC_RELEASE} pthread)
 SET (project_BIN ${PROJECT_NAME})
 
 ADD_EXECUTABLE(${project_BIN} ${project_SRCS})
