--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,8 @@ TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
 
 SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)
 
-TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_constexpr)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -xHOST -O3 -ipo -no-prec-div -fp-model fast=2 -fPIE -static-intel -qopt-report=5 -qopt-report-stdout")
+
+#TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_constexpr)
 
 INSTALL(TARGETS ${project_BIN} DESTINATION bin)
