Fix cmake, finally found that bug :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
-PROJECT (soundLocate)
-SET (APPLICATION_NAME "soundLocate")
+PROJECT (soundFFT)
+SET (APPLICATION_NAME "soundFFT")
 SET (APPLICATION_CODENAME "${PROJECT_NAME}")
 SET (APPLICATION_COPYRIGHT_YEARS "2015")
 SET (APPLICATION_VERSION_MAJOR 1)
@@ -38,11 +38,11 @@ FOREACH (CONFIGINPUT ${CONFIGINPUTS})
   CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
 ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})
 
+FIND_PACKAGE(SFML COMPONENTS system audio network)
+
+INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
+
 ADD_SUBDIRECTORY(src)
 IF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
   INSTALL(DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}" DESTINATION "include")
 ENDIF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
-
-
-FIND_PACKAGE(SFML COMPONENTS system audio network)
-INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
