--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
-SET (project_LIBS fftw3 ${SFML_LIBRARIES} pthread)
+SET (project_LIBS fftw3_threads fftw3 ${SFML_LIBRARIES} pthread)
 SET (project_BIN ${PROJECT_NAME})
 
 ADD_EXECUTABLE(${project_BIN} ${project_SRCS})
@@ -7,7 +7,7 @@ TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
 
 SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -xHOST -ipo -no-prec-div -fp-model fast=2 -static-intel -parallel")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_constexpr)
 
 INSTALL(TARGETS ${project_BIN} DESTINATION bin)
