--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
-SET (project_LIBS fftw3_threads fftw3 ${SFML_LIBRARIES} pthread)
+SET (project_LIBS ${SFML_LIBRARIES} pthread ${CUDA_LIBRARIES} ${NVVM_LIB} ${CUDA_CUFFT_LIBRARIES} /opt/cuda/lib64/libcufftw.so)
 SET (project_BIN ${PROJECT_NAME})
 
 ADD_EXECUTABLE(${project_BIN} ${project_SRCS})
