--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ SET (APPLICATION_VENDOR_NAME "Schülerforschungszentrum Nordhessen")
 SET (APPLICATION_VENDOR_URL "physikclub.de")
 SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
 
-SET (CMAKE_VERBOSE_MAKEFILE 1)
+SET (CMAKE_VERBOSE_MAKEFILE 0)
 
 SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
 SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
@@ -38,9 +38,11 @@ FOREACH (CONFIGINPUT ${CONFIGINPUTS})
   CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
 ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})
 
-FIND_PACKAGE(SFML COMPONENTS system audio network)
-
+FIND_PACKAGE(SFML COMPONENTS system audio network REQUIRED)
 INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
+
+FIND_PACKAGE(MKL REQUIRED)
+INCLUDE_DIRECTORIES(MKL_INCLUDE_DIR)
 
 ADD_SUBDIRECTORY(src)
 IF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
