--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
 PROJECT (soundFFT)
 SET (APPLICATION_NAME "soundFFT")
 SET (APPLICATION_CODENAME "${PROJECT_NAME}")
-SET (APPLICATION_COPYRIGHT_YEARS "2015")
+SET (APPLICATION_COPYRIGHT_YEARS "2016")
 SET (APPLICATION_VERSION_MAJOR 1)
 SET (APPLICATION_VERSION_MINOR 0)
 SET (APPLICATION_VERSION_PATCH 0)
@@ -10,7 +10,8 @@ SET (APPLICATION_VERSION_TYPE SNAPSHOT)
 SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
 SET (APPLICATION_VENDOR_ID "de.sfn_kassel")
 SET (APPLICATION_VENDOR_NAME "Schülerforschungszentrum Nordhessen")
-SET (APPLICATION_VENDOR_URL "physikclub.de")
+SET (APPLICATION_VENDOR_URL "www.sfn-kassel.de")
+SET (APPLICATION_VENDOR_EMAIL "schallortung@gmail.com")
 SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
 
 SET (CMAKE_VERBOSE_MAKEFILE 0)
